feat: Améliorer le Projet de A à Z
Co-authored-by: traeagent <traeagent@users.noreply.github.com>